--- a/app/views/v4/layout-logged-in.html
+++ b/app/views/v4/layout-logged-in.html
@@ -41,7 +41,7 @@
   {{ hmctsHeader({
     service: {
       name: serviceName,
-      url: '/'
+      url: "/"
     },
     navigation: {
       label: 'Account navigation',
