--- a/app/views/v3/cases/notice.html
+++ b/app/views/v3/cases/notice.html
@@ -1,10 +1,10 @@
 
 {% extends "../layout.html" %}
 
-{% set pageId = 'notice-of-acting' %}
+{% set pageId = 'case-access' %}
 
 {% block pageTitle %}
-  Notice of acting
+  Case access
 {% endblock %}
 
 
@@ -22,7 +22,7 @@
  <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-          <h1 class="govuk-heading-xl">Notice of acting</h1>
+          <h1 class="govuk-heading-xl">Case access</h1>
 
           <p></p>
 
