--- a/app/views/v3/layout.html
+++ b/app/views/v3/layout.html
@@ -67,9 +67,9 @@
     active: pageId == 'your-cases'
     },
     {
-    text: 'Notice of acting',
-    href: getUrl('/cases/notice'),
-    active: pageId == 'notice-of-acting'
+    text: 'Case access',
+    href: getUrl('/cases/case-access'),
+    active: pageId == 'case-access'
   }
     ],
     searchHtml: searchHtml
