--- a/app/views/v4/terms-pop.html
+++ b/app/views/v4/terms-pop.html
@@ -1,8 +1,8 @@
 
-{% extends "./layout-logged-out.html" %}
+{% extends "./layout-logged-in.html" %}
 
 {% block pageTitle %}
-  Accept terms and conditions
+  Terms and conditions
 {% endblock %}
 
 
