--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,8 +20,12 @@
 
  {% set iterationTwoHtml %}
         <p class="govuk-body">Added support for Notice of Acting</p>
-        <ul class="govuk-list">
+          <ul class="govuk-list">
           <li><a href="/v3/cases">View prototype</a></li>
+        </ul>
+        <p class="govuk-body">Added support for Inbound communications</p>
+        <ul class="govuk-list">
+          <li><a href="/v3/cases/show">View prototype</a></li>
         </ul>
          <p class="govuk-body">Sign in accept Terms and Conditions</p>
         <ul class="govuk-list">
