--- a/app/views/v3/cases/case-access.html
+++ b/app/views/v3/cases/case-access.html
@@ -38,7 +38,7 @@
   items: [
     {
       value: "notice-of-acting",
-      text: "Notice of acting, change",
+      text: "Notice of acting",
       label: {
         classes: "govuk-label--s"
       },
@@ -48,7 +48,7 @@
     },
     {
       value: "inbound-coms",
-      text: "Inbound communications",
+      text: "Another action",
       label: {
         classes: "govuk-label--s"
       },
