--- a/app/views/v3/cases/index.html
+++ b/app/views/v3/cases/index.html
@@ -6,7 +6,16 @@
 {% block pageTitle %}
   Case list
 {% endblock %}
+{% block beforeContent %}
+{{ govukPhaseBanner({
+  tag: {
+    text: "beta"
+  },
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+}) }}
+{{ super() }}
 
+{% endblock %}
 {% block content %}
   {{ hmctsPageHeaderWithActions({
     title: {
