--- a/app/views/v3/cases/show.html
+++ b/app/views/v3/cases/show.html
@@ -5,19 +5,93 @@
   Case details
 {% endblock %}
 
+{% block header %}
+  {% include "includes/cookie-banner.html" %}
+  {{ hmctsHeader({
+
+    service: {
+      name: serviceName,
+      url: '/'
+    },
+
+    navigation: {
+      label: 'Account navigation',
+      items: [{
+        text: 'Sign out',
+        href: '#1'
+      }]
+    }
+  }) }}
+
+  {% set searchHtml %}
+    <a class="hmcts-search-toggle__button" href="{{getUrl('/search')}}">Find case</a>
+  {% endset %}
+
+  {{ hmctsPrimaryNavigation({
+    label: 'Primary navigation',
+    items: [{
+    text: 'Your cases',
+    href: getUrl('/cases'),
+    active: pageId == 'your-cases'
+    },
+    {
+    text: 'Case access',
+    href: getUrl('/cases/case-access'),
+    active: pageId == 'case-access'
+  }
+    ],
+    searchHtml: searchHtml
+  }) }}
+
+{% endblock %}
+{% block beforeContent %}
+{{ govukPhaseBanner({
+  tag: {
+    text: "beta"
+  },
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+}) }}
+{{ super() }}
+{{govukBackLink({
+href: 'index'
+})}}
+{% endblock %}
+
 {% block content %}
   <div class="hmcts-page-heading">
+<div class="hmcts-page-heading__title">
+<h1 class="govuk-heading-xl">Case details (h1)</h1>
+</div>
 
-    <div class="hmcts-page-heading__title">
+<div class="hmcts-page-heading__actions">
+
+<div class="hmcts-menu">
+  <div class="hmcts-menu__wrapper">
+<p><a href="inbound" role="button" draggable="false" class="govuk-button hmcts-menu__item hmcts-button--secondary hmcts-page-heading__action">
+  Contact HMCTS about this case
+</a></p>
+   
+  </div>
+</div>
+
+</div>
+
+  <!--  <div class="hmcts-page-heading__title">
       <h1 class="govuk-heading-xl">Case details (h1)</h1>
-    </div>
+    </div><
     <div class="hmcts-page-heading__actions">
-        <a href="{{getUrl('/cases/edit')}}">
+       <a href="{{getUrl('/cases/inbound')}}">
+          <div class="black-box black-box--small">
+            <h1 class="govuk-heading-m">Contact HMCTS</h1>
+          </div>
+        </a>
+    </div><div class="hmcts-page-heading__actions">
+       <a href="{{getUrl('/cases/edit')}}">
           <div class="black-box black-box--small">
             <h1 class="govuk-heading-m">Case actions</h1>
           </div>
         </a>
-    </div>
+    </div> -->
   </div>
 
 
