amends to notice of acting

--- a/app/views/v3/cases/notice-confirmation.html
+++ b/app/views/v3/cases/notice-confirmation.html
@@ -14,7 +14,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
          {{ govukPanel({
-              titleText: "Request for confirmation sent successfully"
+              titleText: "Message sent"
             }) }}
       <h2 class="govuk-heading-m">What happens next</h2>
 
