--- a/app/views/v3/cases/case-access.html
+++ b/app/views/v3/cases/case-access.html
@@ -9,9 +9,12 @@
 
 
 {% block beforeContent %}
-
-  {{ super() }}
-
+{{ govukPhaseBanner({
+  tag: {
+    text: "beta"
+  },
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+}) }}
 {% endblock %}
 
 
@@ -21,7 +24,7 @@
 
  <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
- <form action="/v3/cases/designation">
+ <form action="/v3/cases/notice">
    {{ govukRadios({
   idPrefix: "sign-in",
   name: "sign-in",
@@ -43,7 +46,7 @@
         classes: "govuk-label--s"
       },
       hint: {
-        text: "To perform a change, you’ll both the case reference and the email address."
+        text: "This is sometimes known as ‘notice of change’."
       }
     },
     {
