--- a/app/views/v3/cases/method.html
+++ b/app/views/v3/cases/method.html
@@ -1,137 +1,58 @@
-
 {% extends "../layout.html" %}
-
 {% set pageId = 'notice-of-acting' %}
-
 {% block pageTitle %}
-  Prefered method of confirmation - Notice of acting
+Prefered method of confirmation - Notice of acting
 {% endblock %}
-
-
- {% block beforeContent %}
-  {{ super() }}
-  {{govukBackLink({
-    href: 'designation'
-  })}}
+{% block beforeContent %}
+{{ govukPhaseBanner({
+  tag: {
+    text: "beta"
+  },
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+}) }}
+{{govukBackLink({
+href: 'start'
+})}}
 {% endblock %}
-
-
 {% block content %}
-
-
-
- <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-
-          <form action="/v3/cases/details">
-
-  
-
-{% set emailHtml %}
-{{ govukInput({
-  id: "contact-by-email",
-  name: "contact-by-email",
-  type: "email",
-  classes: "govuk-!-width-one-third",
-  label: {
-    text: "Email address"
-  },
-  attributes: {
-    spellcheck: "false"
-  }
-}) }}
-{% endset -%}
-
-
-{% set postHtml %}
-
-
-
- {{ govukInput({
-    label: {
-      html: 'Building and street <span class="govuk-visually-hidden">line 1 of 2</span>'
-    },
-    id: "address-line-1",
-    name: "address-line-1"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      html: '<span class="govuk-visually-hidden">Building and street line 2 of 2</span>'
-    },
-    id: "address-line-2",
-    name: "address-line-2"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      text: "Town or city"
-    },
-    classes: "govuk-!-width-two-thirds",
-    id: "address-town",
-    name: "address-town"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      text: "County"
-    },
-    classes: "govuk-!-width-two-thirds",
-    id: "address-county",
-    name: "address-county"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      text: "Postcode"
-    },
-    classes: "govuk-input--width-10",
-    id: "address-postcode",
-    name: "address-postcode"
-  }) }}
-
-
-{% endset -%}
-
-
-
-{{ govukRadios({
-  classes: "govuk-radios",
-  idPrefix: "how-contacted-conditional",
-  name: "how-contacted",
-  fieldset: {
-    legend: {
-      text: "Client method of confirmation",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--xl"
-    }
-  },
-  hint: {
-    text: "How they will confirm they want you to act on their behalf. Select one option."
-  },
-  id: "response",
-  name: "response",
-  items: [
-    {
-      value: "Email",
-      text: "Email address of client",
-      html: data['emailaddress'] 
-    },
-    {
-      value: "Post",
-      text: "Post",
-      conditional: {
-      html: postHtml
-      }
-      }
-  ]
-}) }}
-
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <form action="/v3/cases/prof-details-1">
+            <div class="govuk-form-group">
+                <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                        <h1 class="govuk-fieldset__heading"><span class="govuk-caption-xl">Notice of acting</span>
+                            Clients preferred method of communication
+                        </h1>
+                    </legend>
+                    {{ govukRadios({
+                    classes: "govuk-radios",
+                    hint: {
+                    text: "How your client will confirm the request for you to act on their behalf."
+                    },
+                    id: "response",
+                    name: "response",
+                    items: [
+                    {
+                    value: "Email",
+                    text: "Email address of client",
+                    html: data['emailaddress']
+                    },
+                    {
+                    value: "Post",
+                    text: "Post",
+                    conditional: {
+                    html: postHtml
+                    }
+                    }
+                    ]
+                    }) }}
+                </fieldset>
+            </div>
             {{govukButton({
-              text: 'Continue'
+            text: 'Continue'
             })}}
-          </form>
-        </div>
-      </div>
-
+        </form>
+    </div>
+</div>
 {% endblock %}
