--- a/app/views/v3/cases/prof-details-1.html
+++ b/app/views/v3/cases/prof-details-1.html
@@ -1,7 +1,7 @@
 {% extends "../layout.html" %}
-{% set pageId = 'notice-of-acting' %}
+{% set pageId = 'case-access' %}
 {% block pageTitle %}
-Prefered method of confirmation - Notice of acting
+Case access
 {% endblock %}
 {% block beforeContent %}
 {{ govukPhaseBanner({
@@ -10,20 +10,18 @@ Prefered method of confirmation - Notice of acting
   },
   html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
-
 {{govukBackLink({
-href: 'prof-details-1'
+href: 'method'
 })}}
 {% endblock %}
 {% block content %}
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
-        <form action="/v3/cases/notice-confirmation">
-            <h1 class="govuk-heading-xl">
+    <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-xl">
             <span class="govuk-caption-xl">Notice of acting</span>
-            Check details
+            Confirm details of legal represenatative
         </h1>
-            <h2 class="govuk-heading-m">Details of legal represenatative</h2>
+        <form action="/v3/cases/details">
             {{ govukSummaryList({
             classes: 'govuk-!-margin-bottom-9',
             rows: [
@@ -80,54 +78,8 @@ href: 'prof-details-1'
             }
             ]
             }) }}
-            <h2 class="govuk-heading-m">Clients details</h2>
-            {{ govukSummaryList({
-            classes: 'govuk-!-margin-bottom-9',
-            rows: [
-            {
-            key: {
-            text: "Case reference"
-            },
-            value: {
-            text: "1234-5678-9876-4321",
-            html: data['reference']
-            },
-            actions: {
-            }
-            },
-            {
-            key: {
-            text: "Email address"
-            },
-            value: {
-            text: "Email address of client",
-            html: data['emailaddress']
-            },
-            actions: {
-            }
-            },
-            {
-            key: {
-            text: "Method of confirmation"
-            },
-            value: {
-            text: "",
-            html: data ['response']
-            },
-            actions: {
-            items: [
-            {
-            href: "method",
-            text: "Change",
-            visuallyHiddenText: "method"
-            }
-            ]
-            }
-            }
-            ]
-            }) }}
             {{govukButton({
-            text: 'Submit'
+            text: 'Continue'
             })}}
         </form>
     </div>
