--- a/app/views/v3/cases/notice-confirmation.html
+++ b/app/views/v3/cases/notice-confirmation.html
@@ -27,7 +27,7 @@
     <p><a href="index.html">Back to your cases</a></p>
     <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-email">Email - continue journey from recepient point of view</a></h3>
   
-     <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-letter">Post - continue journey from recepient point of view</a></h3>
+     <h3 class="govuk-heading-m"><a style="color:blue" href="#">Post - continue journey from recepient point of view</a></h3>
      <p></p>
     </div>
 
