--- a/app/views/v3/cases/confirmation-portal-success.html
+++ b/app/views/v3/cases/confirmation-portal-success.html
@@ -15,7 +15,7 @@
 
 <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-           Confirmation successfully submitted’
+           Confirmation submitted successfully
           </h1>
         <!--  <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
