--- a/app/views/v3/cases/case-access.html
+++ b/app/views/v3/cases/case-access.html
@@ -46,7 +46,8 @@
         classes: "govuk-label--s"
       },
       hint: {
-        text: "This is sometimes known as ‘notice of change’."
+        text: "This is sometimes known as ‘notice of change’. 
+        You can only do this if; a case exists online and you have the email address of the individual you are representing"
       }
     },
     {
