--- a/app/views/v3/cases/inbound-confirm.html
+++ b/app/views/v3/cases/inbound-confirm.html
@@ -56,7 +56,8 @@ html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a
                 Your reference number<br><strong>HDJ2123F</strong>
             </div>
         </div>
-        <p class="govuk-body">We have sent you a confirmation email.</p>
+        <p class="govuk-body">We have sent you a confirmation email. </p>
+        <p class="govuk-body">All attachements will be scanned for viruses and if we detect any issues we'll notify you by email within 15 minutes.</p>
         <h2 class="govuk-heading-m">What happens next</h2>
         <p class="govuk-body">
             We'll aim to reply within {X} working days.
@@ -65,8 +66,9 @@ html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a
             Please use the reference number shown above should you need to contact us again about this particular query.
         </p>
         <p class="govuk-body">
-       <p><a href="index.html">Back to your case</a></p>
-    <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-email-message">Email - continue journey from recepient point of view</a></h3>
+            <p><a href="index.html">Back to your case</a></p>
+            <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-email-message">Email - Happy path - continue journey from recepient point of view</a></h3>
+            <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-email-message-error">Email - Unhappy path - continue journey from recepient point of view</a></h3>
     </div>
 </div>
 </div>
