--- a/app/views/v3/cases/inbound-1-error.html
+++ b/app/views/v3/cases/inbound-1-error.html
@@ -124,9 +124,9 @@ href: 'inbound'
   </span>
   <input class="govuk-file-upload govuk-file-upload--error" id="file-upload-1" name="file-upload-1" type="file" aria-describedby="file-upload-1-error">
 </div>
-                        <p type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                            Upload file
-                        </p>
+                        <p><a href="inbound-1" role="button" draggable="false" class="govuk-button govuk-button--secondary">
+                                Upload file
+                            </a></p>
                         <div class="moj-multi-file-upload">
                             <div class="moj-multi-file__uploaded-files ">
                                 
