--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,17 +19,43 @@
 
 
  {% set iterationTwoHtml %}
-        <p class="govuk-body">Added support for Notice of Acting</p>
           <ul class="govuk-list">
-          <li><a href="/v3/cases">View prototype</a></li>
+            <p class="govuk-body govuk-!-font-weight-bold">Notice of acting</p>
+        <li><a href="/v3/cases">Case access</a></li>
+        <li><a href="/v3/cases/case-access">Case access - Notice of acting</a></li>
+         <li><a href="/v3/cases/notice-of-acting">Notice of acting - Options</a></li>
+          <li><a href="/v3/cases/notice-of-acting">Notice of acting - Act on a client’s behalf</a></li>
+          <li><a href="/v3/cases/start">Notice of acting - Act on a client’s behalf - step 1</a></li>
+          <li><a href="/v3/cases/method">Notice of acting - Act on a client’s behalf - step 2</a></li>
+<li><a href="/v3/cases/prof-details-1">Notice of acting - Act on a client’s behalf - step 3</a></li>
+<li><a href="/v3/cases/prof-details">Notice of acting - Act on a client’s behalf - step 4</a></li>
+<li><a href="/v3/cases/notice-confirmation">Notice of acting - Act on a client’s behalf - step 5</a></li>
+
+<li><a href="/v3/cases/confirmation-email">Notice of acting - Email - Continue journey from recepient point of view - step 1</a></li>
+<li><a href="/v3/cases/confirmation-portal">Notice of acting - Portal - Continue journey from recepient point of view - step 2</a></li>
+<li><a href="/v3/cases/confirmation-portal-cancel">Notice of acting - Portal - Cancel - Continue journey from recepient point of view - step 3</a></li>
+<li><a href="/v3/cases/confirmation-portal-success">Notice of acting - confirmation sent - Continue journey from recepient point of view - step 4</a></li>
+
+<li><a href="/v3/cases/confirmation-email-portal">Notice of acting - Act on a client’s behalf - step 6</a></li>
+<li><a href="/v3/cases/show">Notice of acting - Act on a client’s behalf - step 7</a></li>
         </ul>
-        <p class="govuk-body">Added support for Inbound communications</p>
+        <p class="govuk-body govuk-!-font-weight-bold">Inbound communication</p>
         <ul class="govuk-list">
-          <li><a href="/v3/cases/show">View prototype</a></li>
+          <li><a href="/v3/cases/show">Inbound communications - Action on case</a></li>
+          <li><a href="/v3/cases/inbound">Inbound communications - Contact us about ...</a></li>
+          <li><a href="/v3/cases/inbound-error">Inbound communications - Contact us about error ...</a></li>
+          <li><a href="/v3/cases/inbound-0">Inbound communications - Contact us about ... Solicitor’s letters - no file added</a></li>
+          <li><a href="/v3/cases/inbound-1-error">Inbound communications - Contact us about error ... Solicitor’s letters</a></li>
+          <li><a href="/v3/cases/inbound-1">Inbound communications - Contact us about ... Solicitor’s letters - with file added</a></li>
+          <li><a href="/v3/cases/inbound-confirm">Inbound communications - Message sent</a></li>
+          <li><a href="/v3/cases/confirmation-email-message">Inbound communications - Email to user</a></li>
+          <li><a href="/v3/cases/confirmation-email-message-error">Inbound communications - Email to user - virus detected</a></li>
         </ul>
-         <p class="govuk-body">Sign in accept Terms and Conditions</p>
+         <p class="govuk-body govuk-!-font-weight-bold">Terms and Conditions</p>
         <ul class="govuk-list">
-          <li><a href="/v4">View</a></li>
+          <li><a href="/v4">Terms and Conditions - Sign in</a></li>
+          <li><a href="/v4/terms">Terms and Conditions - New terms</a></li>
+          <li><a href="/v4/terms-pop">Terms and Conditions - New terms pop up</a></li>
         </ul>
       {% endset %}
 
