--- a/app/views/index.html
+++ b/app/views/index.html
@@ -50,6 +50,7 @@
           <li><a href="/v3/cases/inbound-confirm">Inbound communications - Message sent</a></li>
           <li><a href="/v3/cases/confirmation-email-message">Inbound communications - Email to user</a></li>
           <li><a href="/v3/cases/confirmation-email-message-error">Inbound communications - Email to user - virus detected</a></li>
+          <li><a href="/v3/cases/confirmation-email-message-support">Inbound communications - Email to support team - example of ticket</a></li>
         </ul>
          <p class="govuk-body govuk-!-font-weight-bold">Terms and Conditions</p>
         <ul class="govuk-list">
